--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
+    - name: Setup Pages
+      id: pages
+      uses: actions/configure-pages@v5
+
     - name: 👨‍💻 Build
       uses: actions/setup-node@v4
       with:
