feat: init contents

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,7 @@
     "explorer.fileNesting.patterns": {
         "*.html": "${basename}.ts,${basename}.scss"
     },
+    "files.exclude": {
+        "**/node_modules": true
+    },
 }
