--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "homepage": "https://gary.antierfamily.com",
   "devDependencies": {
     "css-loader": "^7.1.2",
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
     "sass": "^1.86.1",
+    "sass-alias": "^2.0.1",
     "sass-loader": "^16.0.5",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.2",
