--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,29 @@
-# Node
-node_modules
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Build outputs
-build
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
 
-# macOS
+# next.js
+/.next/
+
+# The `out` directory should not be ignored by version control
+# /out/
+
+# production
+/build
+
+# misc
 .DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+
+# local env files
+.env*.local
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
