--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,38 @@
 {
-    "compilerOptions": {
-        "noEmitOnError": true,
-        "module": "ESNext",
-        "target": "ES2017",
-        "sourceMap": true,
-        "moduleResolution": "node",
-        "paths": {
-            "@/*": ["./scripts/*"],
-        }
-    },
-    "include": ["**/*"],
-    "exclude": ["node_modules"]
+  "compilerOptions": {
+    "target": "ES2017",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": false,
+    "noEmit": true,
+    "incremental": true,
+    "module": "esnext",
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "paths": {
+      "@/styles/*": ["./styles/*"]
+    }
+  },
+  "include": [
+    "next-env.d.ts",
+    ".next/types/**/*.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
