--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "sagemodeninja.github.io",
-  "version": "0.2.0",
+  "private": true,
   "description": "Gary Antier's personal website.",
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start"
+    "build": "next build"
   },
   "repository": {
     "type": "git",
@@ -17,6 +15,7 @@
   },
   "homepage": "https://gary.antierfamily.com",
   "devDependencies": {
+    "@types/node": "^24.3.0",
     "@types/react": "19.1.11",
     "typescript": "5.9.2"
   },
