--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Gary Antier's personal website.",
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build"
+    "build": "next build --turbopack"
   },
   "repository": {
     "type": "git",
